@@ -30,6 +30,7 @@
 #ifdef	__USE_LINUX_CDROM__
 
 #include "quakedef.h"
+#include "cdaudio.h"
 
 #include <unistd.h>
 #include <sys/ioctl.h>
@@ -37,7 +38,6 @@
 #include <fcntl.h>
 #include <time.h>
 #include <errno.h>
-
 #include <linux/cdrom.h>
 #include <paths.h>
 
