@@ -7,6 +7,7 @@
 
 #include "quakedef.h"
 #include "bgmusic.h"
+#include "cdaudio.h"
 #include "r_shared.h"
 
 static const char *svc_strings[] =
