@@ -56,8 +56,6 @@
 #include "screen.h"
 #include "sbar.h"
 #include "q_sound.h"
-#include "cdaudio.h"
-#include "mididef.h"
 
 #include "pr_comp.h"	/* defs shared with qcc		*/
 #include "progdefs.h"	/* generated by program cdefs	*/
